...
          //top
        {id: "H_801", floorId: "H_8", x: 200, y: 114, type: "room", label: "Room 801"},
        {id: "H_803", floorId: "H_8", x: 293, y: 115, type: "room", label: "Room 803"},
        {id: "H_805.02", floorId: "H_8", x: 379, y: 122, type: "room", label: "Room 805.02"},
        {id: "H_805.01", floorId: "H_8", x: 379, y: 163, type: "room", label: "Room 805.01"},
        {id: "H_805.03", floorId: "H_8", x: 379, y: 75, type: "room", label: "Room 805.03"},
        {id: "H_807", floorId: "H_8", x: 457, y: 115, type: "room", label: "Room 807"},
        {id: "H_811", floorId: "H_8", x: 648, y: 115, type: "room", label: "Room 811"},
        {id: "H_813", floorId: "H_8", x: 736, y: 115, type: "room", label: "Room 813"},
        {id: "H_815", floorId: "H_8", x: 823, y: 115, type: "room", label: "Room 815"},
          //left
        {id: "H_867", floorId: "H_8", x: 60, y: 116, type: "room", label: "Room 867"},
        {id: "H_865", floorId: "H_8", x: 74, y: 171, type: "room", label: "Room 865"},
...
        {id: "H_1_N8", floorId: "H_1", x: 600, y: 653, type: "hallway"},
        {id: "H_1_N9", floorId: "H_1", x: 535, y: 207, type: "hallway"},
        {id: "H_1_N10", floorId: "H_1", x: 955, y: 661, type: "hallway"},
        {id: "H_1_N11", floorId: "H_1", x: 955, y: 473, type: "hallway"},

        //room
        {id: "H_110", floorId: "H_1", x: 260, y: 344, type: "room", label: "Room 110"},

        //Interfloor connection
        {id: "H_1_ESCALATOR_UP_TO_FLOOR_1", floorId: "H_1", x: 775, y: 725, type: "escalator", label: "Escalator Up to Floor 1"},
        {id: "H_1_ESCALATOR_DOWN_TO_FLOOR_1", floorId: "H_1", x: 640, y: 620, type: "escalator", label: "Escalator Down to Floor 1"},
        {id: "H_1_ESCALATOR_UP_TO_FLOOR_2", floorId: "H_1", x: 827, y: 618, type: "escalator", label: "Escalator Up to Floor 2"},

...
