...
      floor: 2,
      mapPosition: { x: 0.64, y: 0.29 }, // 670/1024, 300/1024
    },
    // Stairs
    {
      id: "VL-2-stairs-1",
      label: "Stairs",
      category: "STAIRS" as POICategory,
      description: "Stairs",
      room: "S1",
      floor: 2,
      mapPosition: { x: 0.749, y: 0.77 }, // 767/1024, 789/1024
    },
...
      floor: 2,
      mapPosition: { x: 0.548, y: 0.251 }, // 561/1024, 257/1024
    },
    // Elevator
    {
      id: "VL-2-elevator-1",
      label: "Elevator",
      category: "ELEVATOR" as POICategory,
      description: "Elevator",
      room: "E1",
      floor: 2,
      mapPosition: { x: 0.21, y: 0.51 }, // 225/1024, 530/1024
    },
...
  "H-8": [
    //  Top-row labs
    {
      id: "H-8-lab-807",
      label: "Lab",
      category: "LAB" as POICategory,
      description: "Computer Lab",
      room: "807",
      floor: 8,
      mapPosition: mapPositionFromNode("H_807", { x: 0.446, y: 0.112 }),
    },

    {
      id: "H-8-lab-811",
...
  WC_SHARED: "WC",
  LAB: "Lab",
  ROOM: "Room",
  STUDY_ROOM: "Study Room",
  STAIRS: "Stairs",
  ELEVATOR: "Elevator",
  ESCALATOR: "Escalator",
  PRINT: "Print",
  IT: "IT",
  HELP_DESK: "Security Desk",
  STUDENT_UNION: "Student Union",
  FOOD: "Cafe",
  MICROWAVE: "Microwave",
...
