const BuildingTheme = {
  SGW: {
    H: "#FD7D7F",
    LB: "#F4FD7D",
    LS: "#FD7DDD",
    EV: "#7DD2FD",
    MB: "#FDCC7D",
    FB: "#83FD7D",
    FG: "#B6FF82",
    CL: "#7D8EFD",
    GM: "#7DFDB6",
    ER: "#BA82FF"
  },
  LOY: {
    VL: "#FD7DDD",
    SP: "#F4FD7D",
    CJ: "#FDCC7D",
    CC: "#7DFDB6",
    AD: "#FD7D7F",
    FC: "#BA82FF",
    HU: "#7DD2FD"
  }
};

export default BuildingTheme;
