...
    [-73.57922973098734,45.494009897188114]
  ]]
      }
    },
    {
      "type": "Feature",
      "properties": { "id": "GM", "name": "Guy-De Maisonneuve" },
      "geometry": {
        "type": "Polygon",
 "coordinates": [[
  [-73.579164314561, 45.49581198720719],
  [-73.57869701751606, 45.49558755266115],
  [-73.5783601680668, 45.49592943925149],
...
