# Maestro cannot "see" text inside the Google Maps view
# must interact with the map using screen coordinates
# then assert the Native UI Bottom Sheet appears
appId: com.conuwalks.app
---
- runFlow: 
    file: ../subflows/launch.yaml
    env:
        USERNAME: "${USERNAME}"
        PASSWORD: "${PASSWORD}"

# Start at SGW
- tapOn: "Sir George Williams"

- tapOn:
    point: 50%, 50%

- tapOn:
    point: 50%, 45%
- assertVisible: "Guy-De Maisonneuve.*"
- assertVisible: "GM"

- tapOn:
    id: "close-button" # needs testID="close-button"
    optional: true     # Fallback: tap X coordinate if ID missing
- tapOn:  # close the pop-up
    point: 10%, 65%
    optional: true

# Switch to Loyola
- tapOn: "Loyola"
- assertNotVisible: "Guy-De Maisonneuve.*"

- doubleTapOn:
    point: 50%, 50%

- tapOn:
    point: 45%, 50%
- assertVisible: "Central Building"
- assertVisible: "CC"
- tapOn:
    point: 10%, 10%
- tapOn: "Sir George Williams"

- doubleTapOn:
    point: 50%, 50%

- tapOn:
    point: 45%, 63%
- assertVisible: "John Molson Building.*"
- assertVisible: "MB"
