# Maestro cannot "see" text inside the Google Maps view
# must interact with the map using screen coordinates
# then assert the Native UI Bottom Sheet appears
appId: com.conuwalks.app
---
- runFlow:
    file: ../subflows/launch.yaml
    env:
      USERNAME: "${USERNAME}"
      PASSWORD: "${PASSWORD}"

- runFlow:
    file: ../subflows/clear-next-class-banner.yaml

# Start at SGW
- tapOn: "Sir George Williams"

- setLocation:
    latitude: 45.495633
    longitude: -73.578902
- tapOn:
    id: "recenter-location-button"
- waitForAnimationToEnd

- tapOn:
    point: 56%, 45%
- assertVisible: "Guy-De Maisonneuve.*"
- assertVisible: "GM"

- runFlow:
    file: ../subflows/close-popup.yaml

# Switch to Loyola
- tapOn: "Loyola"
- assertNotVisible: "Guy-De Maisonneuve.*"

- tapOn:
    point: 40%, 54%
- assertVisible: "Central Building"
- assertVisible: "CC"

- runFlow:
    file: ../subflows/close-popup.yaml

- tapOn: "Sir George Williams"

- tapOn:
    point: 45%, 63%
- assertVisible: "John Molson Building.*"
- assertVisible: "MB"

- runFlow:
    file: ../subflows/close-popup.yaml
